--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,12 @@
             android:layout_weight="1"
             android:text="Scan Text" />
     </LinearLayout>
+    <Button
+        android:id="@+id/btnReplaceText"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Replace Text" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -38,15 +44,21 @@
         android:layout_weight="4">
 
         <TextView
-            android:id="@+id/tvText"
+            android:id="@+id/tvOriginalText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!" />
     </ScrollView>
 
-    <ListView
-        android:id="@+id/lvShortCodes"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4" />
+        android:layout_weight="4">
+
+        <TextView
+            android:id="@+id/tvReplacedText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hello World!" />
+    </ScrollView>
 </LinearLayout>
