--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,14 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Scan Text" />
+            android:text="Scan and Replace" />
     </LinearLayout>
-    <Button
-        android:id="@+id/btnReplaceText"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="Replace Text" />
 
     <ScrollView
         android:layout_width="match_parent"
